Fix build warning